--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -20,6 +20,6 @@ formats:
    - pdf
 
 # Optionally declare the Python requirements required to build your docs
-# python:
-#    install:
-#    - requirements: docs/requirements.txt
+python:
+   install:
+   - requirements: src/sbr/docs/requirements.txt
